--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "tsc && node dist/tests.js"
+    "start": "tsc-watch --onSuccess 'node dist/tests.js'"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,14 @@
     "url": "https://github.com/tskj/typescript-json-decoder/issues"
   },
   "homepage": "https://github.com/tskj/typescript-json-decoder#readme",
-  "prepublish": "tsc"
+  "prepublish": "tsc",
+  "devDependencies": {
+    "tsc-watch": "^4.2.9"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
+  }
 }
