Actually go to 1.0.0, and install typescript as dev-dep

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/tskj/typescript-json-decoder#readme",
   "prepublish": "tsc",
   "devDependencies": {
-    "tsc-watch": "^4.2.9"
+    "tsc-watch": "^4.2.9",
+    "typescript": "^4.2.3"
   },
   "prettier": {
     "trailingComma": "all",
