Remove source files from npm package

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "typescript-json-decoder",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "tsc-watch --onSuccess 'node dist/tests.js'"
+    "start": "tsc-watch --onSuccess 'node dist/tests.js'",
+    "prepublishOnly": "npm run build && git add . && git commit && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,6 @@
     "tabWidth": 2,
     "semi": true,
     "singleQuote": true
-  }
+  },
+  "files": ["dist/**/*"]
 }
