--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "start": "tsc-watch --onSuccess 'node dist/tests.js'",
-    "prepublishOnly": "npm run build && git push && git push --tags"
+    "prepublishOnly": "npm run build && npm run test && git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,9 @@
   "homepage": "https://github.com/tskj/typescript-json-decoder#readme",
   "prepublish": "tsc",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.3"
   },
@@ -32,5 +35,21 @@
     "semi": true,
     "singleQuote": true
   },
-  "files": ["dist/**/*"]
+  "files": [
+    "dist/**/*"
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    },
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    }
+  }
 }
