--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest",
+    "test": "jest && npx tsd",
     "build": "tsc",
     "prepublishOnly": "npm run build && npm run test && git push && git push --tags"
   },
@@ -24,8 +24,10 @@
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "jest": "^27.4.5",
+    "npx": "^10.2.2",
     "ts-jest": "^27.1.2",
     "tsc-watch": "^4.2.9",
+    "tsd": "^0.19.0",
     "typescript": "^4.2.3"
   },
   "prettier": {
@@ -50,5 +52,8 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     }
+  },
+  "tsd": {
+    "directory": "tests"
   }
 }
