--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "prepublish": "tsc",
   "devDependencies": {
     "@types/jest": "^27.0.3",
+    "fast-check": "^2.20.0",
     "jest": "^27.4.5",
     "npx": "^10.2.2",
     "ts-jest": "^27.1.2",
